--- a/src/components/datepicker/demo/index.html
+++ b/src/components/datepicker/demo/index.html
@@ -66,7 +66,7 @@
   <p>
     This markup: <br />
     <code>
-        &lt;uif-datepicker ng-model=&quot;value_2&quot;&#13;&#10;       uif-months=&quot;Jan,Feb,Maa,Apr,Mei,Jun,Jul,Aug,Sep,Okt,Nov,Dec&quot;&#13;&#10;       uif-label=&quot;Start date&quot;&#13;&#10;       uif-placeholder-text=&quot;Please, find a date&quot;&#13;&#10;       /&gt;  
+        &lt;uif-datepicker ng-model=&quot;value_2&quot;&#13;&#10;       uif-months=&quot;Jan,Feb,Maa,Apr,Mei,Jun,Jul,Aug,Sep,Okt,Nov,Dec&quot;&#13;&#10;       uif-label=&quot;Start date&quot;&#13;&#10;       placeholder=&quot;Please, find a date&quot;&#13;&#10;       /&gt;  
     </code>
   </p>
 
@@ -77,7 +77,7 @@
     <uif-datepicker ng-model="value_2"
        uif-months="Jan,Feb,Maa,Apr,Mei,Jun,Jul,Aug,Sep,Okt,Nov,Dec"
        uif-label="Start date"
-       uif-placeholder-text="Please, find a date"
+       placeholder="Please, find a date"
        />
     <br/>
     <p>Value: {{value_2}}</p>  
