fix(link): add support for "hero" link
Add support for "hero" link type, with attribute validation and tests.

Closes #187. Closes #190.

--- a/src/components/link/demo/index.html
+++ b/src/components/link/demo/index.html
@@ -38,6 +38,33 @@
         <uif-link ng-href="http://ngofficeuifabric.com/">Some link text here</uif-link>
     </p>
 
+    <p>
+        Above will give you the same result as this markup:
+        <br />
+        <code>
+      &lt;uif-link ng-href=&quot;http://ngofficeuifabric.com/&quot; uif-type=&quot;regular&quot;&gt;Some link text here&lt;/uif-link&gt;
+        </code>
+    </p>
+
+    <p>
+        Renders this:
+        <br />
+        <uif-link ng-href="http://ngofficeuifabric.com/" uif-type="regular">Some link text here</uif-link>
+    </p>
+
+    <p>
+        To render "hero" link, use <em>hero</em> as the value of <em>uif-type</em> attribute:
+        <br />
+        <code>
+      &lt;uif-link ng-href=&quot;http://ngofficeuifabric.com/&quot; uif-type=&quot;hero&quot;&gt;Some link text here&lt;/uif-link&gt;
+        </code>
+    </p>
+
+    <p>
+        Renders this:
+        <br />
+        <uif-link ng-href="http://ngofficeuifabric.com/" uif-type="hero">Some link text here</uif-link>
+    </p>
 
 
 </body>
