Added breadcrumb to components. Demo update

--- a/src/components/breadcrumb/demo/index.html
+++ b/src/components/breadcrumb/demo/index.html
@@ -2,58 +2,40 @@
 <html>
 
   <head>
-    <title>ngOfficeUiFabric | uif-Label demo</title>
+    <title>ngOfficeUiFabric | uif-Breadcrumb demo</title>
     <meta charset="utf-8">
 
     <!-- office ui fabric css -->
     <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
     <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
     <!-- angular library -->
-    <script src="../../../../node_modules/angular/angular.min.js"></script>
+    <script src="../../../../node_modules/angular/angular.js"></script>
     <!-- ngofficeuifabric library -->
     <script src="../../../../dist/ngOfficeUiFabric.js"></script>
     <script src="index.js"></script>
   </head>
 
   <body ng-app="demoApp">
-    <h1 class="ms-font-su">Label Demo | &lt;uif-label&gt;</h1>
+    <h1 class="ms-font-su">Breadcrumb Demo | &lt;uif-breadcrumb&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
 
     <!-- first example -->
-    <p>To render label, use the following markup:
+    <p>To render breadcrumb, use the following markup:
       <br/>
       <pre>
-&lt;uif-label&gt;Name&lt;/uif-label&gt;
+
       </pre>
     </p>
 
     <p>
-      <uif-label>Name</uif-label>
+      <uif-breadcrumb>
+        <uif-breadcrumb-link ng-href="\'http://github1.com\'">GitHub1</uif-breadcrumb-link>
+        <uif-breadcrumb-link ng-href="\'http://github2.com\'">GitHub2</uif-breadcrumb-link>
+        <uif-breadcrumb-link ng-href="\'http://github3.com\'">GitHub3</uif-breadcrumb-link>
+        <uif-breadcrumb-link ng-href="\'http://github4.com\'">GitHub4</uif-breadcrumb-link>
+        <uif-breadcrumb-link uif-current>Current</uif-breadcrumb-link>
+      </uif-breadcrumb>
     </p>
 
-    <!-- second example -->
-    <p>
-      Following markup will render required label:
-      <br/>
-      <pre>
-&lt;uif-label required&gt;Name&lt;/uif-label&gt;
-      </pre>
-    </p>
-
-    <p>
-      <uif-label required>Name</uif-label>
-    </p>
-  <!-- third example -->
-    <p>
-      This markup will render disabled label:
-      <br/>
-      <pre>
-&lt;uif-label disabled&gt;Name&lt;/uif-label&gt;
-      </pre>
-    </p>
-
-    <p>
-      <uif-label disabled>Name</uif-label>
-    </p>
   </body>
 </html>
