Updates after demo testing

--- a/src/components/breadcrumb/demo/index.html
+++ b/src/components/breadcrumb/demo/index.html
@@ -6,8 +6,11 @@
     <meta charset="utf-8">
 
     <!-- office ui fabric css -->
-    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
-    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
+    <!--<link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />-->
+    
+    <link rel="stylesheet" href="http://appsforoffice.microsoft.com/fabric/1.1.3/fabric.min.css">
+    <link rel="stylesheet" href="http://appsforoffice.microsoft.com/fabric/1.1.3/fabric.components.min.css">
     <!-- angular library -->
     <script src="../../../../node_modules/angular/angular.js"></script>
     <!-- ngofficeuifabric library -->
@@ -36,6 +39,7 @@
         <uif-breadcrumb-link uif-current>Current</uif-breadcrumb-link>
       </uif-breadcrumb>
     </p>
-
+      <hr />
+      <div class="ms-Breadcrumb"><span class="ms-Breadcrumb-currentLarge">Working files</span> <a href="#" class="ms-Breadcrumb-parent">OneDrive @ Contoso</a> <span class="ms-Breadcrumb-current">Working files</span></div>
   </body>
 </html>
