--- a/src/components/breadcrumb/demoBasicUsage/index.html
+++ b/src/components/breadcrumb/demoBasicUsage/index.html
@@ -1,8 +1,7 @@
-<!-- REGULAR -->
-<uif-label>Name</uif-label>
-
-<!-- REQUIRED -->
-<uif-label required>Name</uif-label>
-
-<!-- DISABLED -->
-<uif-label disabled>Name</uif-label>
+<uif-breadcrumb>
+  <uif-breadcrumb-link ng-href="\'http://github1.com\'">GitHub1</uif-breadcrumb-link>
+  <uif-breadcrumb-link ng-href="\'http://github2.com\'">GitHub2</uif-breadcrumb-link>
+  <uif-breadcrumb-link ng-href="\'http://github3.com\'">GitHub3</uif-breadcrumb-link>
+  <uif-breadcrumb-link ng-href="\'http://github4.com\'">GitHub4</uif-breadcrumb-link>
+  <uif-breadcrumb-link uif-current>Current</uif-breadcrumb-link>
+</uif-breadcrumb>
