--- a/src/components/breadcrumb/demo/index.html
+++ b/src/components/breadcrumb/demo/index.html
@@ -26,7 +26,7 @@
     <p>To render breadcrumb, use the following markup:
       <br/>
       <pre>
-
+        &lt;uif-breadcrumb&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github1.com\&apos;&quot;&gt;GitHub1&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github2.com\&apos;&quot;&gt;GitHub2&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github3.com\&apos;&quot;&gt;GitHub3&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github4.com\&apos;&quot;&gt;GitHub4&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link uif-current&gt;Current&lt;/uif-breadcrumb-link&gt;&#13;&#10;        &lt;/uif-breadcrumb&gt;
       </pre>
     </p>
 
@@ -39,7 +39,5 @@
         <uif-breadcrumb-link uif-current>Current</uif-breadcrumb-link>
       </uif-breadcrumb>
     </p>
-      <hr />
-      <div class="ms-Breadcrumb"><span class="ms-Breadcrumb-currentLarge">Working files</span> <a href="#" class="ms-Breadcrumb-parent">OneDrive @ Contoso</a> <span class="ms-Breadcrumb-current">Working files</span></div>
   </body>
 </html>
