fix(textfield): Cannot set required or disabled
Added attribute handling of required and disabled and set appropriate
classes.

--- a/src/components/textfield/demo/index.html
+++ b/src/components/textfield/demo/index.html
@@ -51,6 +51,33 @@
     <uif-textfield uif-label="This is the label" uif-underlined />
   </p>
   
+  <h2>Required</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; required /&gt;
+    </code>
+  </p>
+
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" required />
+  </p>
+  
+  <h2>Disabled</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; disabled /&gt;
+    </code>
+  </p>
+
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" disabled />
+  </p>
   <h2>Placeholder</h2>
    <p>
     This markup: <br />
