fix(datepicker): label should be removed if empty
If uif-label is not set, the label should be removed entirely from the
DOM.

Added an ng-if, added a demo, and added a test case.

Closes #272. Closes #273.

--- a/src/components/datepicker/demo/index.html
+++ b/src/components/datepicker/demo/index.html
@@ -40,6 +40,8 @@
     the ngofficeuifabric.js reference</em>
     <hr />
     <h2>Demos</h2>
+    
+    <h3>Default values with ng-model</h3>
   <p>
     This markup: <br />
     <code>
@@ -58,6 +60,8 @@
     <br/>
     <p>Value: {{value}}</p>
   </p>
+  
+  <h3>Custom months, label, and placeholder</h3>
   <p>
     This markup: <br />
     <code>
@@ -78,8 +82,21 @@
     <p>Value: {{value_2}}</p>
 
   </p>
+  <h3>Empty label</h3>
   <p>
+    
+    This markup: <br />
+    <code>
+        &lt;uif-datepicker uif-label=&quot;&quot; /&gt;
+    </code>
+  </p>
 
+  <p>
+    Renders this:
+    <br />
+
+    <uif-datepicker uif-label="" />
+    
   </p>
 
 
