fix(textfield): Disabled not watched
The disabled attributed was not watched, causing removing/adding the
attribute not to update the component.

Targets #268

--- a/src/components/textfield/demo/index.html
+++ b/src/components/textfield/demo/index.html
@@ -65,6 +65,24 @@
     <uif-textfield uif-label="This is the label" required />
   </p>
   
+  <h2>ng-Disabled</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; ng-disabled=&quot;disabled&quot;/&gt;
+    </code>
+  </p>
+
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" ng-disabled="disabled" />
+    
+  </p>
+  <p>
+    <input type="checkbox" ng-model="disabled" />Disabled
+    </p>
+  
   <h2>Disabled</h2>
   <p>
     This markup: <br />
@@ -78,6 +96,7 @@
     <br />
     <uif-textfield uif-label="This is the label" disabled />
   </p>
+  
   <h2>Placeholder</h2>
    <p>
     This markup: <br />
